--- a/LBM.dist
+++ b/LBM.dist
@@ -2,24 +2,24 @@
 # http://www.openengine.dk/wiki/Projects/LBM
 
 # main repository
-darcs / http://openengine.dk/code/openengine
-darcs-dev / fh.daimi.au.dk:/users/cgd/code/openengine
+git / https://github.com/OpenEngineDK/openengine.git
+git-dev / git@github.com:OpenEngineDK/openengine.git
 
 # project repository
 # (uncomment the following two lines after uploading your project)
-darcs /projects/LBM http://openengine.dk/code/projects/LBM
-darcs-dev /projects/LBM fh.daimi.au.dk:/users/cgd/code/projects/LBM
+git /projects/LBM https://github.com/OpenEngineDK/projects-LBM.git
+git-dev /projects/LBM git@github.com:OpenEngineDK/projects-LBM.git
 
 # dist dependencies
 
 # required extensions
-darcs /extensions/SDL                    http://openengine.dk/code/extensions/SDL
-darcs /extensions/OpenGLRenderer         http://openengine.dk/code/extensions/OpenGLRenderer
-darcs /extensions/GenericHandlers 	 http://openengine.dk/code/extensions/GenericHandlers
+git /extensions/SDL                    https://github.com/OpenEngineDK/extensions-SDL.git
+git /extensions/OpenGLRenderer         https://github.com/OpenEngineDK/extensions-OpenGLRenderer.git
+git /extensions/GenericHandlers 	 https://github.com/OpenEngineDK/extensions-GenericHandlers.git
 
-darcs-dev /extensions/SDL                    fh.daimi.au.dk:/users/cgd/code/extensions/SDL
-darcs-dev /extensions/OpenGLRenderer         fh.daimi.au.dk:/users/cgd/code/extensions/OpenGLRenderer
-darcs-dev /extensions/GenericHandlers 	     fh.daimi.au.dk:/users/cgd/code/extensions/GenericHandlers
+git-dev /extensions/SDL                    git@github.com:OpenEngineDK/extensions-SDL.git
+git-dev /extensions/OpenGLRenderer         git@github.com:OpenEngineDK/extensions-OpenGLRenderer.git
+git-dev /extensions/GenericHandlers 	     git@github.com:OpenEngineDK/extensions-GenericHandlers.git
 
 # windows libraries
 
